--- a/css/responsive.css
+++ b/css/responsive.css
@@ -200,10 +200,10 @@ px      68    160    252    */
     position: relative;
   }
   #slider .block .owl-carousel div img {
-    width: 100%;
-    height: 220px;
-    border-radius: 5px;
-    padding-right: 0px;
+    /* width: 65%; */
+    height: auto;
+    /* border-radius: 5px; */
+    /* padding-right: 0px; */
   }
   /*--
     cocktail-picker Start
